spruce up frontend
